--- a/css/style.css
+++ b/css/style.css
@@ -93,10 +93,10 @@ h1 {
 }
 	h1 a {
 		display:block; 
-		width:316px;
-		height:60px;
+		width:640px;
+		height:80px;
 		text-indent:-9999em;
-		background:url(../images/logoFK.png) 0 0 no-repeat;
+		background:url(../images/capa3.png) 0 0 no-repeat;
 	}
 	
 /***** search form *****/
